--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/theme-asset-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/theme-asset-list.tpl.html
@@ -2,7 +2,7 @@
 	<div class="blade-inner">
 		<div class="inner-block">
 			<ul class="list __items" ng-if="blade.currentEntities.length">
-				<li class="list-item" ng-click="blade.openBlade(data)" ng-repeat="data in blade.currentEntities | orderBy:id" ng-class="{'__selected': data.id === selectedNodeId}">
+				<li class="list-item" ng-click="blade.openBlade(data)" ng-repeat="data in blade.currentEntities | orderBy:'id':reverse" ng-class="{'__selected': data.id === selectedNodeId}">
 					<span class="list-name">
 						{{data.id}}
 					</span>
