--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-setting-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-setting-detail.tpl.html
@@ -12,7 +12,13 @@
                 <div class="form-group">
                     <label class="form-label">Type</label>
                     <div class="form-input">
-                        <select va-chosen ng-model="blade.currentEntity.valueType" ng-options="x for x in types" required></select>
+                       
+                        <ui-select ng-model="blade.currentEntity.valueType">
+                            <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+                            <ui-select-choices repeat="x as x in types | filter: { name: $select.search }">
+                                <span ng-bind-html="x | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
                 <div class="form-group">
