--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-dictionary.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-dictionary.tpl.html
@@ -4,10 +4,15 @@
             <form class="form" ng-submit="add()" name="pdForm" novalidate autocomplete="off">
                 <fieldset>
                     <legend>New value</legend>
-                    <div class="form-group">
+                    <div class="form-group" ng-if="pb.currentEntity.multilanguage">
                         <label class="form-label" ng-if="pb.currentEntity.multilanguage">Language</label>
-                        <div ng-if="pb.currentEntity.multilanguage" data-role="input-control" class="input-control select">
-                            <select chosen ng-model="newValue.languageCode" ng-options="lang.languageCode as lang.displayName for lang in pb.currentEntity.catalog.languages"></select>
+                        <div data-role="input-control" class="input-control select">
+                            <ui-select ng-model="newValue.languageCode" ng-disabled="disabled">
+                                <ui-select-match placeholder="Select language">{{$select.selected.displayName}}</ui-select-match>
+                                <ui-select-choices repeat="lang.languageCode as lang in pb.currentEntity.catalog.languages | filter: {languageCode: $select.search}">
+                                    <span ng-bind-html="lang.displayName | highlight: $select.search"></span>
+                                </ui-select-choices>
+                            </ui-select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -15,10 +20,8 @@
                         <div class="form-input" ng-init="setForm(pdForm);" ng-if="pb.currentEntity.valueType !== 2">
                             <input required ng-model="newValue.value" ui-validate=" 'dictValueValidator($value)' " name="dictValue" focus-on="" type="text" placeholder="input text" />
                         </div>
-                        <div class="form-input __number js-number-input-plugin" ng-if="pb.currentEntity.valueType === 2" data-step="1">
-                            <input class="js-val" required ng-model="newValue.value" ui-validate=" 'dictValueValidator($value)' " name="dictValue" focus-on="" type="text" placeholder="input number" />
-                            <a class="up js-up"></a>
-                            <a class="down js-down"></a>
+                        <div class="form-input __number" ng-if="pb.currentEntity.valueType === 2">
+                            <input required ng-model="newValue.value" ui-validate=" 'dictValueValidator($value)' " name="dictValue" focus-on="" step="1" type="text" placeholder="input number" />
                         </div>
                         <!--<button type="button" tabindex="-1" class="btn-clear"></button>-->
                         <div class="form-error" ng-if="pdForm.dictValue.$error.required || pdForm.dictValue.$error.validator">
@@ -57,17 +60,21 @@
                                 </td>
                                 <td class="table-col">
                                     <div class="form-input" ng-if="pb.currentEntity.multilanguage">
-                                        <select chosen ng-model="data.languageCode" ng-options="lang.languageCode as lang.displayName for lang in pb.currentEntity.catalog.languages"></select>
+                                        <!-- <select ng-model="data.languageCode" ng-options="lang.languageCode as lang.displayName for lang in pb.currentEntity.catalog.languages"></select> -->
+                                        <ui-select ng-model="data.languageCode" ng-disabled="disabled">
+                                            <ui-select-match placeholder="Select language">{{$select.selected.displayName}}</ui-select-match>
+                                            <ui-select-choices repeat="lang.languageCode as lang in pb.currentEntity.catalog.languages | filter: {languageCode: $select.search}">
+                                                <span ng-bind-html="lang.displayName | highlight: $select.search"></span>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                 </td>
                                 <td class="table-col">
                                     <div class="form-input" ng-if="pb.currentEntity.valueType !== 2">
                                         <input required ng-model="data.value" type="text" placeholder="input text" />
                                     </div>
-                                    <div class="form-input __number js-number-input-plugin" data-step="1" ng-if="pb.currentEntity.valueType === 2">
-                                        <input class="js-val" required ng-model="data.value" type="text" placeholder="input number" />
-                                        <a class="up js-up"></a>
-                                        <a class="down js-down"></a>
+                                    <div class="form-input __number js-number-input-plugin" ng-if="pb.currentEntity.valueType === 2">
+                                        <input required ng-model="data.value" type="text" step="1" placeholder="input number" />
                                     </div>
                                     <ul role="menu" class="menu __context" id="pd_menu_{{$index}}">
                                         <li class="menu-item" ng-click='delete($index)'>
