--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/item/item-prices-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/item/item-prices-list.tpl.html
@@ -30,24 +30,18 @@
                                 {{data.currency}}
                             </td>
                             <td class="table-col">
-                                <div data-step="any" class="form-input __number js-number-input-plugin">
-                                    <input type="number" ng-model="data.list" required="" class="js-val">
-                                    <a class="up js-up"></a>
-                                    <a class="down js-down"></a>
+                                <div data-step="any" class="form-input __number">
+                                    <input va-number type="text" ng-model="data.list" required="" step="1">
                                 </div>
                             </td>
                             <td class="table-col">
-                                <div data-step="1" class="form-input __number js-number-input-plugin">
-                                    <input type="number" ng-model="data.sale" class="js-val">
-                                    <a class="up js-up"></a>
-                                    <a class="down js-down"></a>
+                                <div class="form-input __number">
+                                    <input va-number type="text" ng-model="data.sale" step="1">
                                 </div>
                             </td>
                             <td class="table-col">
-                                <div data-step="1" class="form-input __number js-number-input-plugin">
-                                    <input type="number" ng-model="data.minQuantity" required="" class="js-val">
-                                    <a class="up js-up"></a>
-                                    <a class="down js-down"></a>
+                                <div data-step="1" class="form-input __number">
+                                    <input va-number type="text" ng-model="data.minQuantity" required="" step="1">
                                 </div>
                             </td>
                             <td class="table-col">
