--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-asset.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-asset.tpl.html
@@ -10,8 +10,8 @@
 				</div>
 				<div class="form-group">
 					<label class="form-label">Editorial asset content</label>
-					<div class="form-input">
-						<textarea style="max-height:350px; min-height:350px;" required class="form-control big" cols="60" rows="30" ng-model="blade.currentEntity.content" placeholder="Enter asset content"></textarea>
+					<div class="form-input __expanded">
+						<textarea required cols="60" rows="30" ng-model="blade.currentEntity.content" placeholder="Enter asset content"></textarea>
 					</div>
 				</div>
 			</form>
