--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
@@ -1,4 +1,5 @@
 ﻿<div class="blade-content __medium-wide __gray">
+    <div class="canceled">{{blade.currentEntity.status}}</div>
     <div class="blade-inner">
         <div class="inner-block">
             <div class="form columns clearfix">
