Complete property cusomize and del logo and version by Sasha

--- a/src/Presentation/WebAdmin/Design/index.html
+++ b/src/Presentation/WebAdmin/Design/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/base-modules.css">
         <link rel="stylesheet" href="css/project-modules.css">
         <link rel="stylesheet" href="css/cosmetic.css">
+        <link rel="stylesheet" href="css/modules/order.css">
 
         <link rel="stylesheet" href="chosen/chosen.css">
 
