--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="blade-content __gray">
 	<div class="blade-inner">
-		<div class="inner-block">
+		<div class="inner-block clearfix">
             <form class="form" name="detailForm">
                 <div class="form-group" ng-init="setForm(detailForm)">
                     <label class="form-label">Code</label>
@@ -28,7 +28,13 @@
                 <div class="form-group">
                     <label class="form-label">State</label>
                     <div class="form-input">
-                        <select va-chosen ng-model="blade.currentEntity.storeState" ng-options="x.id as x.name for x in storeStates" required></select>
+                        <!-- <select va-chosen ng-model="blade.currentEntity.storeState" ng-options="x.id as x.name for x in storeStates" required></select> -->
+                        <ui-select ng-model="blade.currentEntity.storeState">
+                            <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
+                            <ui-select-choices repeat="x.id as x in storeStates | filter: { name: $select.search }">
+                                <span ng-bind-html="x.name | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
             </form>
