-UPD order. new operation (minor changes)

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <label class="form-label">Shipment number</label>
                         <div class="form-input">
-                            <input required type="text" ng-model="blade.currentEntity.number">
+                            <input type="text" ng-model="blade.currentEntity.number">
                         </div>
                     </div>
                     <div class="form-group">
