--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.PagesModule.Web/Scripts/blades/pages-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.PagesModule.Web/Scripts/blades/pages-list.tpl.html
@@ -1,4 +1,31 @@
-﻿<div class="blade-content">
+﻿<div class="blade-content __medium-wide">
+	<div class="blade-inner">
+		<div class="inner-block">
+			<div class="table-wrapper">
+				<table class="table">
+					<thead>
+						<tr>
+							<th class="table-col">Page name</th>
+							<th class="table-col">Modified</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="table-item" ng-repeat="data in blade.currentEntities" ng-class="{'__selected': data.name === selectedItem.name}" context-menu data-target="ipl_menu_{{data.name}}" ng-click='blade.openBlade(data)' >
+							<td class="table-col">
+								{{data.name}}
+							</td>
+							<td class="table-col __datePage">
+								<span class="table-date" am-time-ago="data.modifiedDate"></span>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!--<div class="blade-content">
 	<div class="blade-inner">
 		<div class="inner-block">
 			<ul class="list __items" ng-if="blade.currentEntities.length">
@@ -8,10 +35,10 @@
 					</span>
 				</li>
 			</ul>
-			<p class="text" ng-if="!blade.currentEntities.length">No Themes yet</p>
+			<p class="text" ng-if="!blade.currentEntities.length">No Pages yet</p>
 		</div>
 	</div>
-</div>
+</div>-->
 
 <!--<div class="blade-content __medium-wide">
 	<div class="blade-inner">
@@ -27,13 +54,11 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="table-item" ng-class="{' __error': notification.notifyType == 'error', ' __warning': notification.notifyType == 'warning', ' __info': notification.notifyType == 'info'}" ng-click="notification.action(notification)" ng-repeat="notification in notifications" ng-include="notification.template"></tr>
+						<tr class="table-item" ng-click="notification.action(notification)" ng-repeat="page in blade.currentEntities" ng-include="notification.template"></tr>
 					</tbody>
 				</table>
 			</div>
-			<div class="pagination">
-				<pagination boundary-links="true" max-size="pageSettings.numPages" items-per-page="pageSettings.itemsPerPageCount" total-items="pageSettings.totalItems" ng-model="pageSettings.currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
-			</div>
+			<p class="text" ng-if="!blade.currentEntities.length">No Pages yet</p>
 		</div>
 	</div>
 </div>-->
