--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-address-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-address-list.tpl.html
@@ -10,7 +10,7 @@
                     <!--<span class="list-descr">{{data.value | limitTo:50}}</span>-->
                 </li>
 			</ul>
-			<p class="text" ng-if="!blade.currentEntities.length">No Settings yet</p>
+			<p class="text" ng-if="!blade.currentEntities.length">No Addresses yet</p>
 		</div>
 	</div>
 </div>
