--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
@@ -9,19 +9,19 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="form-input">
-                        <va-widget-container group="customerDetail1" blade="blade"></va-widget-container>
-                    </div>
+                    <va-widget-container group="customerDetail1" blade="blade"></va-widget-container>
                 </div>
-                <div class="form-group">
-                    <label class="form-label">Birthday</label>
+                <!--<div class="form-group">
+                    <div class="form-input">
+                        <label class="form-label">Birthday</label>
+                    </div>
                     <div class="form-input __calendar">
                         <input type="text" class="form-control" ng-model="blade.currentEntity.birthDate" datepicker-popup="{{format}}" name="bd" is-open="datepickers.bd" datepicker-options="dateOptions" close-text="Close" />
                         <button class="btn" type="button" ng-click="open($event,'bd')">
                             <i class="btn-ico fa fa-calendar"></i>
                         </button>
                     </div>
-                </div>
+                </div>-->
             </form>
             <va-widget-container group="customerDetail2" blade="blade"></va-widget-container>
         </div>
