small fix (customers)

--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
@@ -1,6 +1,6 @@
-﻿<div class="blade-content __medium-wide __gray">
+﻿<div class="blade-content __gray">
     <div class="blade-inner">
-        <div class="inner-block">
+        <div class="inner-block clearfix">
             <form class="form" name="detailForm">
                 <div class="form-group" ng-init="setForm(detailForm)">
                     <label class="form-label">Full name</label>
